--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ django = "^3.0.4"
 psycopg2 = "^2.8.4"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.8.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
