--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Ujwal <ujwal@symboinsurance.com>"]
 python = "^3.7"
 django = "^3.0.4"
 psycopg2 = "^2.8.4"
+black = "^19.10b0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.3"
@@ -15,3 +16,28 @@ flake8 = "^3.8.3"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.black]
+line-length = 88
+target-version = ['py37']
+include = '\.pyi?$'
+exclude = '''
+
+(
+  /(
+      \.eggs         # exclude a few common directories in the
+    | \.git          # root of the project
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | _build
+    | buck-out
+    | build
+    | dist
+    | migrations
+  )/
+  | foo.py           # also separately exclude a file named foo.py in
+                     # the root of the project
+)
+'''
