--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 DEBUG=1
 SECRET_KEY=+2(xj+sh4gb46i2kxe9_5q!v663ov%=1n4$)mxaqaf2&_g=k@v
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1
+DB_NAME=qaplatform
+DB_USER=ujwal
+DB_PASSWORD=fsoc00
+DB_HOST=db
+DB_PORT=5432
