showing user name WIP

--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1
 DB_NAME=qaplatform
 DB_USER=ujwal
 DB_PASSWORD=fsoc00
-DB_HOST=db
+DB_HOST=localhost
 DB_PORT=5432
