--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "vue": "^3.0.0-rc.1"
+    "vue": "^3.0.0-rc.1",
+    "vue-router": "^4.0.0-beta.5"
   },
   "devDependencies": {
     "vite": "^1.0.0-rc.1",
