WIP migration to vue 3

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ psycopg2 = "^2.8.4"
 gunicorn = "^20.0.4"
 python-dotenv = "^0.14.0"
 django-cors-headers = "^3.4.0"
+djangorestframework = "^3.11.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.3"
