--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,11 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "vue": "^3.0.0-rc.1",
-    "vue-router": "^4.0.0-beta.5"
+    "vue": "^3.0.0-rc.10",
+    "vue-router": "^4.0.0-beta.9"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.1",
-    "@vue/compiler-sfc": "^3.0.0-rc.1"
+    "@vue/compiler-sfc": "^3.0.0-rc.10",
+    "vite": "^1.0.0-rc.1"
   }
 }
